--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,8 +24,7 @@ exec-once = /usr/lib/bluetooth/bluetoothd --noplugin=sap
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = HDMI-A-1, 1920x1080@240,0x0,1
-monitor=eDP-1,1920x1080@144,1920x0,1
+monitor = preferred,auto ,auto
 
 
 
